tests/dataset/tpc-ds/compiler/erlang/q22.error
run: exit status 127
escript: exception error: bad key: inv_quantity_on_hand
  in function  map_get/2
     called as map_get(inv_quantity_on_hand,
                       #{i =>
                             #{i_item_sk => 1,i_product_name => "Prod1",
                               i_brand => "Brand1",i_class => "Class1",
                               i_category => "Cat1"},
                         inv =>
                             #{inv_item_sk => 1,inv_date_sk => 4,
                               inv_quantity_on_hand => 20},
                         d => #{d_date_sk => 4,d_month_seq => 3}})
     *** argument 1: not present in map
  in call from q22_erl__escript__1752__561071__536899__8964:'-main/1-lc$^6/1-1-'/1 (/tmp/q22.erl, line 9)
  in call from q22_erl__escript__1752__561071__536899__8964:'-main/1-lc$^4/1-0-'/1 (/tmp/q22.erl, line 9)
  in call from q22_erl__escript__1752__561071__536899__8964:main/1 (/tmp/q22.erl, line 9)
  in call from escript:run/2 (escript.erl, line 904)
  in call from escript:start/1 (escript.erl, line 418)
  in call from init:start_it/1 
  in call from init:start_em/1 
